--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,14 @@
     <string name="current_trip">Current Trip</string>
     <string name="trip_list">Trip List</string>
     <string name="photo_Selection_error">خطآ في تحميل الصورة</string>
+    <string name="trip_going_to_destination">الرحلة متحها لميناء الوجهة</string>
+    <string name="trip_arrived">الرحلة وصلت الى وجهتها</string>
+    <string name="location_permission_needed">صلاحية الدخول للموقع مطلوبة</string>
+    <string name="no_available_seats_to_book">لا يوجد مقاعد متوفرة للحجز</string>
+    <string name="user_profile">معلومات المستخدم</string>
+    <string name="user_name">اسم المستخدم</string>
+    <string name="action_log_out">تسجيل خروج</string>
+    <string name="failed_image_download">فشل في تحميل الصورة</string>
+    <string name="image_is_required">الصورة مطلوبة</string>
+
 </resources>
