--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,9 @@
     <string name="add_phone_no">"من فضلك ادخل رقم الهاتف "</string>
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="seat_is_reserved">تم حجز المقعد بنجاح</string>
+    <string name="trip_is_reserved">الرحلة محجوزة مسبقا</string>
+    <string name="book_trip">احجز رحلة</string>
+    <string name="you_have_trip_at_the_same_time">لديك رحلة في نفس الوقت لا يمكنك حجز هذه الرحلة</string>
 
 </resources>
