--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,5 +54,6 @@
     <string name="you_have_trip_at_the_same_time">لديك رحلة في نفس الوقت لا يمكنك حجز هذه الرحلة</string>
     <string name="going_to_destination">الى الوجهة</string>
     <string name="no_user">لم يتم العثور على مستخد</string>
+    <string name="cancel">الغاء الحجز</string>
 
 </resources>
