add ProgressBar to SignActvity and fix fragment_trips_list layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,5 +56,6 @@
     <string name="no_user">لم يتم العثور على مستخد</string>
     <string name="cancel">الغاء الحجز</string>
     <string name="update_profile">تحديث</string>
+    <string name="arrived">تم الوصول للوجهة</string>
 
 </resources>
